<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_actionmanagertest"> Action Manager Test </string>
    <string name="activity_actionstest"> Actions Test </string>
    <string name="activity_atlastest"> Atlas Test </string>
    <string name="activity_box2dtest"> Box2D Test </string>
    <string name="activity_clickandmovetest"> Click And Move Test </string>
    <string name="activity_cocosnodetest"> Cocos Node Test </string>
    <string name="activity_drawprimitivestest"> Draw Primitives Test </string>
    <string name="activity_easeactionstest"> Ease Actions Test </string>
    <string name="activity_effectsadvancedtest"> Advanced Effects </string>
    <string name="activity_effectstest"> Effects Test </string>
    <string name="activity_jbox2dtest"> JBox2D Test </string>
    <string name="activity_menutest"> Menu Test </string>
    <string name="activity_motionstreaktest"> Motion Streak Test </string>
    <string name="activity_particletest"> Particle Test </string>
    <string name="activity_schedulertest"> Scheduler Test </string>
    <string name="activity_tilemaptest"> Tile Map Test </string>
    <string name="activity_scenetest"> Scene Test </string>
    <string name="activity_soundenginetest"> SoundEngine Test </string>
    <string name="activity_spritestest"> Sprites Test </string>
    <string name="activity_transitionstest"> Transitions Test </string>
    <string name="activity_rotateworldtest"> Rotate World Test </string>
    <string name="activity_parallaxtest"> Parallax Test </string>

    <!-- LoginActivity -->
    <string name="app_name">大侠客</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="setting">设置</string>

</resources>