<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#667788"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/app_name" />

    <RelativeLayout
        android:id="@+id/login_layout_center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:id="@+id/login_layout_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <EditText
                android:id="@+id/login_et_account"
                android:layout_width="@dimen/login_edittext_width"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_layout_account"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="@dimen/login_edittext_width"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout_center"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/register" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/setting" />
    </RelativeLayout>

</RelativeLayout>